tests/shouldPass/expression-not.bc
//EXPECTED BEHAVIOUR:
//proc1 has a rather elaborate gate expression consisting of several negations.
//Because the process will deadlock once i==4, it should increment parameter i starting at 0 and stopping when i = 3

//WHAT IT TESTS:
// -correct infix and postfix parsing of logical not in gates

//process definitions
proc1[i] = [~(i==5) & i < 10 & ~(i==4)] -> {incrementParameter, 1}.proc1[i+1];

//system line
proc1[0];
